--- a/style-login.css
+++ b/style-login.css
@@ -9,7 +9,7 @@
 
 body {
     font-family: 'Gabriela';
-    background: #fff;
+    background: #59654d;
     text-align: center;
     color: #591102;
     display: flex;
